refactors hobby-text

--- a/src/main/resources/templates/fragments/home-page/hobbies.html
+++ b/src/main/resources/templates/fragments/home-page/hobbies.html
@@ -20,6 +20,21 @@
             </div>
         </div>
     </div>
+
+    <div class="jumbotron jumbotron-fluid" th:fragment="text">
+        <div class="container">
+            <p class="lead"
+               th:text="
+           'After work, you can catch me wearing multiple hats; not just the coding kind.
+            I\'m a foodie exploring the culinary wonders of the world,
+            a (board) game enthusiast always down for one more game,
+            a home-cook hungrily scrolling through youtube recipe videos,
+            an anime enjoyer still wishing I could fire off a kamehameha,
+            a chess amateur gambit\'ing away online and over-the-board,
+            and a globe-trotter seeking Wi-Fi signals wherever I go.'">
+            </p>
+        </div>
+    </div>
 </body>
 
 </html>
