--- a/src/main/resources/templates/home-page.html
+++ b/src/main/resources/templates/home-page.html
@@ -27,7 +27,7 @@
             </div>
 
             <div class="col">
-                <article th:replace="~{fragments/home-page/hobbytext :: hobbytext}"></article>
+                <article th:replace="~{fragments/home-page/hobbies :: text}"></article>
             </div>
 
         </div>
