fixes margin for navbar and adds 2 improvements

--- a/src/main/resources/templates/home-page.html
+++ b/src/main/resources/templates/home-page.html
@@ -7,7 +7,7 @@
     <title>Home</title>
 </head>
 
-<body class="pt-5">
+<body class="pt-5 mt-3">
 <nav layout:fragment="content" data-bs-spy="scroll" data-bs-target="#my-navbar" data-bs-smooth-scroll="true">
 
     <section class="scheme-color-1">
