--- a/src/main/resources/templates/fragments/home-page/improvements.html
+++ b/src/main/resources/templates/fragments/home-page/improvements.html
@@ -20,6 +20,9 @@
         <li class="list-group-item scheme-color-3">SonarQube & NexusIQ in pipeline</li>
         <li class="list-group-item scheme-color-3">Add relevant links to Hobbies</li>
         <li class="list-group-item scheme-color-3">Contact form</li>
+        <li class="list-group-item scheme-color-3">Favicon</li>
+        <li class="list-group-item scheme-color-3">Navigation bar styling/highlighting</li>
+
     </ul>
 </div>
 </body>
