--- a/src/main/resources/templates/fragments/home-page/hobbies.html
+++ b/src/main/resources/templates/fragments/home-page/hobbies.html
@@ -5,7 +5,7 @@
 </head>
 
 <body>
-    <div class="container border border-dark rounded scheme-color-1 pb-3" th:fragment="hobbies">
+    <div class="container rounded pb-3" th:fragment="hobbies">
         <div class="jumbotron text-center">
             <h3 class="display-4 my-header">Hobbies</h3>
         </div>
