Button around link -> link around button

--- a/src/main/resources/templates/fragments/home-page/aboutwebsite.html
+++ b/src/main/resources/templates/fragments/home-page/aboutwebsite.html
@@ -20,9 +20,11 @@
                  updatable items (experience, hobbies, certificates, and skills) from configuration. Check out the
                  repository for yourself'">
         </span>
-        <button type="button" class="btn btn-sm btn-outline-success">
-            <a href="https://github.com/PhiTiet/portfolio" target="_blank">here</a>
-        </button>
+        <a href="https://github.com/PhiTiet/portfolio" target="_blank">
+            <button type="button" class="btn btn-sm btn-outline-success">
+                here
+            </button>
+        </a>
         <span>.</span>
     </div>
 </body>
