--- a/src/main/resources/templates/fragments/home-page/aboutme.html
+++ b/src/main/resources/templates/fragments/home-page/aboutme.html
@@ -17,14 +17,18 @@
         <p class="lead">
             For a glimpse in my latest ability in software engineering check out the repository used to build and host
             this website
-            <button type="button" class="btn btn-sm btn-outline-secondary">
-                <a href="https://github.com/PhiTiet/portfolio" target="_blank">here</a>
-            </button>
+            <a href="https://github.com/PhiTiet/portfolio" target="_blank">
+                <button type="button" class="btn btn-sm btn-outline-secondary">
+                    here
+                </button>
+            </a>
             . If you're instead interested in my programming and problem-solving ability I'd urge you to check out my
             latest Advent Of Code repository
-            <button type="button" class="btn btn-sm btn-outline-secondary">
-                <a href="https://github.com/PhiTiet/AdventOfCode2023" target="_blank">here</a>
-            </button>
+            <a href="https://github.com/PhiTiet/AdventOfCode2023" target="_blank">
+                <button type="button" class="btn btn-sm btn-outline-secondary">
+                    here
+                </button>
+            </a>
             .
         </p>
 
