--- a/src/main/resources/templates/fragments/home-page/aboutme.html
+++ b/src/main/resources/templates/fragments/home-page/aboutme.html
@@ -40,7 +40,7 @@
         <p class="lead" th:text="
         'Furthermore, I\'ve chosen to spotlight a select few of my most significant skills, providing a glimpse into the
          valuable techniques and insights I\'ve acquired. Additionally,  you\'ll find certificates and diplomas that
-         signify important milestones in my ongoing learning journey.'"></p>
+         signify important milestones in my ongoing learning journey. I'm fluent in both English and Dutch'"></p>
 
         <p class="lead" th:text="
         'Finally, my colleagues generously took the time to offer sincere recommendations, and I\'m genuinely thankful
