--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-    <div th:replace ="~{fragments/general/navbar :: navbar}"></div>
+    <div th:replace="~{fragments/general/navbar :: navbar}"></div>
 
     <div>
         <div layout:fragment="content"></div>
@@ -15,6 +15,7 @@
     <div th:replace="~{fragments/general/footer :: footer}"></div>
 
     <script src="https://kit.fontawesome.com/b73a5b4c7a.js" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+            crossorigin="anonymous"></script>
 </body>
 </html>
