--- a/src/main/resources/templates/fragments/home-page/aboutwebsite.html
+++ b/src/main/resources/templates/fragments/home-page/aboutwebsite.html
@@ -4,22 +4,29 @@
 <head>
 </head>
 
-<body >
+<body>
     <div class="jumbotron jumbotron-fluid m-3" th:fragment="aboutwebsite">
         <h5> About this website</h5>
-        <span th:text="'This site is served by a containerized Java Spring boot
-                 application. Currently, the application runs on Java ' + ${details.currentJavaVersion} + ' and Spring
-                 boot version ' + ${details.currentSpringBootVersion} +  ' With Thymeleaf templates and Bootstrap 5 as
-                 frontend. I intend to keep these versions up to date.
-                 As of writing, I\'m hosting the website on Azure\'s Kubernetes Service via a Github Actions workflow which
-                 builds and deploys automatically on push. However, the application itself is cloud-provider agnostic
-                 so that could change. I might for instance host it on my raspberry-pi due to cost concerns :).
-                 DDoS protection & Https is provided through cloudflare, which acts as a proxy between the DNS and the
-                 Ingress controller.Finally, I\'ve made the versions and time-periods dynamic, they\'re calculated
-                 serverside. As for the  Spring Boot architecture, I\'ve adhered to a layered architecture with easily
-                 updatable items (experience, hobbies, certificates, and skills) from configuration. Check out the
-                 repository for yourself'">
+        <p th:text="'This site is served by a containerized Java Spring boot
+                     application. Currently, the application runs on Java ' + ${details.currentJavaVersion} + ' and Spring
+                     boot version ' + ${details.currentSpringBootVersion} +  ' With Thymeleaf templates and Bootstrap 5 as
+                     frontend. I intend to keep these versions up to date.'">
+        </p>
+        <p>
+            As of writing, I\'m hosting the website on Azure's Kubernetes Service via a Github Actions workflow which
+            builds and deploys automatically on push. However, the application itself is cloud-provider agnostic
+            so that could change. I might for instance host it on my raspberry-pi due to cost concerns :).
+            DDoS protection & Https is provided through cloudflare, which acts as a proxy between the DNS and the
+            Ingress controller.
+        </p>
+
+        <span>
+            Finally, I've made the versions and time-periods dynamic, they\'re calculated
+            serverside. As for the Spring Boot architecture, I've adhered to a layered architecture with easily
+            updatable items (experience, hobbies, certificates, and skills) from configuration. Check out the
+            repository for yourself>
         </span>
+
         <a href="https://github.com/PhiTiet/portfolio" target="_blank">
             <button type="button" class="btn btn-sm btn-outline-success">
                 here
