--- a/src/main/resources/templates/fragments/home-page/aboutwebsite.html
+++ b/src/main/resources/templates/fragments/home-page/aboutwebsite.html
@@ -24,7 +24,7 @@
             Finally, I've made the versions and time-periods dynamic, they're calculated
             serverside. As for the Spring Boot architecture, I've adhered to a layered architecture with easily
             updatable items (experience, hobbies, certificates, and skills) from configuration. Check out the
-            repository for yourself>
+            repository for yourself! 
         </span>
 
         <a href="https://github.com/PhiTiet/portfolio" target="_blank">
