outlines text with hobbies

--- a/src/main/resources/templates/fragments/home-page/hobbies.html
+++ b/src/main/resources/templates/fragments/home-page/hobbies.html
@@ -22,7 +22,7 @@
     </div>
 
     <div class="jumbotron jumbotron-fluid" th:fragment="text">
-        <div class="container">
+        <div class="container mt-5">
             <p class="lead"
                th:text="
            'After work, you can catch me wearing multiple hats; not just the coding kind.
