adds padding to headers

--- a/src/main/resources/templates/fragments/home-page/recommendation.html
+++ b/src/main/resources/templates/fragments/home-page/recommendation.html
@@ -9,7 +9,7 @@
     <h3 class="display-4 my-header">Recommendation Letters</h3>
 </div>
 <hr class="my-4">
-<div class="accordion accordion-flush" id="recommendationAccordion">
+<div class="accordion accordion-flush py-3" id="recommendationAccordion">
 
     <div class="accordion-item">
         <h2 class="accordion-header" id="flush-headingTwo">
