--- a/src/main/resources/templates/home-page.html
+++ b/src/main/resources/templates/home-page.html
@@ -51,7 +51,7 @@
         <div class="col-0 col-lg-1"></div>
     </section>
 
-    <section class="row scheme-color-1 pb-3" id="recommendation">
+    <section class="row scheme-color-1 py-3" id="recommendation">
         <div class="col-0 col-lg-1"></div>
         <div class="col-12 col-lg-10">
             <article th:replace="~{fragments/home-page/recommendation :: recommendation}"></article>
