--- a/src/main/resources/templates/fragments/home-page/timeline.html
+++ b/src/main/resources/templates/fragments/home-page/timeline.html
@@ -7,6 +7,7 @@
     <div class="jumbotron text-center">
         <h2 class="display-4 my-header text-light">Work history</h2>
     </div>
+    <hr class="my-4 mb-3">
     <ul class="timeline-with-icons">
         <li class="timeline-item pb-3 mb-0 formal-font" th:each="event : ${details.events}">
             <span class="timeline-icon"><i th:classappend="${event.icon.classes}"
