--- a/src/main/resources/templates/fragments/home-page/aboutwebsite.html
+++ b/src/main/resources/templates/fragments/home-page/aboutwebsite.html
@@ -28,7 +28,7 @@
         </span>
 
         <a href="https://github.com/PhiTiet/portfolio" target="_blank">
-            <button type="button" class="btn btn-sm btn-outline-success">
+            <button type="button" class="btn btn-sm btn-outline-dark">
                 here
             </button>
         </a>
