--- a/src/main/resources/templates/fragments/home-page/aboutme.html
+++ b/src/main/resources/templates/fragments/home-page/aboutme.html
@@ -22,7 +22,7 @@
                     here
                 </button>
             </a>
-            . If you're instead interested in my programming and problem-solving ability I'd urge you to check out my
+            . If you're interested in my programming and problem-solving ability I'd urge you to check out my
             latest Advent Of Code repository
             <a href="https://github.com/PhiTiet/AdventOfCode2023" target="_blank">
                 <button type="button" class="btn btn-sm btn-outline-secondary">
