--- a/src/main/resources/templates/fragments/home-page/improvements.html
+++ b/src/main/resources/templates/fragments/home-page/improvements.html
@@ -22,6 +22,8 @@
         <li class="list-group-item scheme-color-3">Contact form</li>
         <li class="list-group-item scheme-color-3"><s>Favicon</s></li>
         <li class="list-group-item scheme-color-3">Navigation bar styling/highlighting</li>
+        <li class="list-group-item scheme-color-3">Improve PDF rendering on Edge Browsers</li>
+
 
     </ul>
 </div>
