--- a/src/main/resources/templates/fragments/home-page/improvements.html
+++ b/src/main/resources/templates/fragments/home-page/improvements.html
@@ -23,6 +23,7 @@
         <li class="list-group-item scheme-color-3"><s>Favicon</s></li>
         <li class="list-group-item scheme-color-3">Navigation bar styling/highlighting</li>
         <li class="list-group-item scheme-color-3">Improve PDF rendering on Edge Browsers</li>
+        <li class="list-group-item scheme-color-3">No HTML in backend :(</li>
 
 
     </ul>
