--- a/src/main/resources/templates/fragments/home-page/aboutwebsite.html
+++ b/src/main/resources/templates/fragments/home-page/aboutwebsite.html
@@ -13,9 +13,9 @@
                      frontend. I intend to keep these versions up to date.'">
         </p>
         <p>
-            As of writing, I'm no longer hosting the website on Azure's Kubernetes Service via a Github Actions workflow which
-            builds and deploys automatically on push. However, because the application itself is cloud-provider agnostic
-            this has changed. I'm now hosting it on my raspberry-pi due to cost concerns :).
+            As of writing, I'm no longer hosting the website on Azure's Kubernetes Service via a Github Actions workflow.
+            However, the website still builds and deploys automatically on push. Because the application itself is c
+            loud-provider agnostic , I've (relatively) quickly switched to hosting it on my raspberry-pi due to cost concerns :).
             DDoS protection & Https is provided through cloudflare, which acts as a proxy between the DNS and the
             Ingress controller. I'm using oznu/cloudflare-ddns to interface with Cloudflare and update my DNS records dynamically
             ever 5 minutes.
