fixes bug in naming

--- a/src/main/resources/templates/fragments/home-page/carousel.html
+++ b/src/main/resources/templates/fragments/home-page/carousel.html
@@ -6,19 +6,16 @@
 <div class="carousel slide px-3 pt-4" data-bs-ride="carousel" th:fragment="carousel" data-bs-interval="3000">
     <div class="carousel-inner">
         <div class="carousel-item active">
-            <img th:src="@{static/images/merged2.png}" alt="2 Pictures of myself with my cat">
+            <img th:src="@{static/images/self_cat.png}" alt="Two Pictures of myself with my cat">
         </div>
         <div class="carousel-item">
             <img th:src="@{static/images/self_beach.png}"  alt="Picture of myself on the beach">
         </div>
         <div class="carousel-item">
-            <img th:src="@{static/images/self_mimi.png}"  alt="Picture of myself with my friend's cat">
-        </div>
-        <div class="carousel-item">
             <img th:src="@{static/images/self_pieter.png}" alt="Picture of myself with Pieter Bijl">
         </div>
         <div class="carousel-item">
-            <img th:src="@{static/images/self_chess2.png}" alt="Picture of myself during a chess game OTB">
+            <img th:src="@{static/images/self_chess.png}" alt="Picture of myself during a chess game OTB">
         </div>
     </div>
 </div>
