--- a/src/main/resources/templates/fragments/home-page/aboutwebsite.html
+++ b/src/main/resources/templates/fragments/home-page/aboutwebsite.html
@@ -19,9 +19,9 @@
             DDoS protection & Https is provided through cloudflare, which acts as a proxy between the DNS and the
             webserver.
 
-            I'm using oznu/cloudflare-ddns to interface with Cloudflare and update my DNS records dynamically every 5 minutes.
+            I'm using 'oznu/cloudflare-ddns' to interface with Cloudflare and update my DNS records dynamically every 5 minutes.
             Ziggo only provides static IP adresses to its business customers, which I'm not willing to pay, because then I might as well
-            host it on Azure without the hassle. Instead of Azure Container Repository (ACR) I'm not using Github Container Repository (ghcr.io)
+            host it on Azure without the hassle. Instead of Azure Container Repository (ACR) I'm now using Github Container Repository (ghcr.io)
             for image storage.
         </p>
 
