updates recommendations and way website is hosted

--- a/src/main/resources/templates/fragments/home-page/aboutwebsite.html
+++ b/src/main/resources/templates/fragments/home-page/aboutwebsite.html
@@ -15,13 +15,13 @@
         <p>
             As of writing, I'm no longer hosting the website on Azure's Kubernetes Service via a Github Actions workflow.
             However, the website still builds and deploys automatically on push. Because the application itself is c
-            loud-provider agnostic , I've (relatively) quickly switched to hosting it on my raspberry-pi due to cost concerns :).
+            loud-provider agnostic , I've (relatively) quickly switched to hosting it on my Debian server due to cost concerns :).
             DDoS protection & Https is provided through cloudflare, which acts as a proxy between the DNS and the
             webserver.
 
-            I'm using 'oznu/cloudflare-ddns' to interface with Cloudflare and update my DNS records dynamically every 5 minutes.
-            Ziggo only provides static IP adresses to its business customers, which I'm not willing to pay, because then I might as well
-            host it on Azure without the hassle. Instead of Azure Container Repository (ACR) I'm now using Github Container Repository (ghcr.io)
+            I've recently moved from 'oznu/cloudflare-ddns' to Cloudflare Tunnel to expose the website to the web, I find this
+            approach to be simpler and more convenient for other uses like ssh-ing into the local network.
+            Instead of Azure Container Repository (ACR) I'm now using Github Container Repository (ghcr.io)
             for image storage.
         </p>
 
