--- a/src/main/resources/templates/fragments/home-page/recommendation.html
+++ b/src/main/resources/templates/fragments/home-page/recommendation.html
@@ -21,7 +21,7 @@
         <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo"
              data-bs-parent="#recommendationAccordion">
             <div class="accordion-body">
-                <iframe th:src="@{static/pdf/recommendation_letter_armend_hoxha_removed_autograph.pdf#toolbar=0}"
+                <iframe th:src="@{static/pdf/recommendation_letter_armend_hoxha_without_signature.pdf#toolbar=0}"
                         class="min-vh-100 w-100">
                 </iframe>
             </div>
@@ -38,7 +38,23 @@
         <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree"
              data-bs-parent="#recommendationAccordion">
             <div class="accordion-body d-flex justify-content-center">
-                <iframe th:src="@{static/pdf/recommendation_letter_rob_smorgenburg_removed_autograph.pdf#toolbar=0}"
+                <iframe th:src="@{static/pdf/recommendation_letter_rob_smorgenburg_without_signature.pdf#toolbar=0}"
+                        class="min-vh-100 w-100"></iframe>
+            </div>
+        </div>
+    </div>
+
+    <div class="accordion-item">
+        <h2 class="accordion-header" id="flush-headingFour">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#flush-collapseFour" aria-expanded="false" aria-controls="flush-collapseFour">
+                Rachid El Kaddouri
+            </button>
+        </h2>
+        <div id="flush-collapseFour" class="accordion-collapse collapse" aria-labelledby="flush-headingFour"
+             data-bs-parent="#recommendationAccordion">
+            <div class="accordion-body d-flex justify-content-center">
+                <iframe th:src="@{static/pdf/recommendation_rachid_without_signature.pdf#toolbar=0}"
                         class="min-vh-100 w-100"></iframe>
             </div>
         </div>
