--- a/src/main/resources/templates/fragments/general/header.html
+++ b/src/main/resources/templates/fragments/general/header.html
@@ -1,10 +1,11 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <head th:fragment="header">
-    <link rel="icon" type="image/x-icon" href="/static/images/favicon.ico">
+    <script>(function(){try{const t=localStorage.getItem('theme');if(t==='dark'){document.documentElement.classList.add('dark');document.documentElement.dataset.theme='dark';}}catch(e){}})();</script>
+    <link rel="icon" type="image/x-icon" th:href="@{/images/favicon.ico}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" th:href="@{static/style.css}">
+    <link rel="stylesheet" type="text/css" th:href="@{/style.css}">
 </head>
 <body>
 </body>
