--- a/src/main/resources/templates/fragments/general/navbar.html
+++ b/src/main/resources/templates/fragments/general/navbar.html
@@ -3,18 +3,20 @@
 <head>
 </head>
 <body>
-<nav class="navbar navbar-expand-sm navbar-dark scheme-color-6 fixed-top"
-     id="my-navbar" th:fragment="navbar">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="#">
-            <img src="/static/images/favicon.ico" alt="" width="30" height="30">
+<nav class="navbar navbar-expand-sm navbar-dark scheme-color-6 fixed-top" id="my-navbar" th:fragment="navbar">
+    <div class="container-fluid d-flex align-items-center">
+        <a class="navbar-brand me-2" href="#">
+            <img th:src="@{/images/favicon.ico}" alt="Home" width="30" height="30" decoding="async">
         </a>
-
-        <span class="flex-grow-1"></span>
-        <div class="navbar-collapse collapse flex-grow-1 justify-content-center">
-            <ul class="navbar-nav mx-auto">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav"
+                aria-controls="mainNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse flex-grow-1 justify-content-center" id="mainNav">
+            <ul class="navbar-nav mx-auto mb-2 mb-sm-0">
                 <li class="nav-item px-2">
                     <a class="nav-link text-light" href="#about-me">About me</a>
+                </li>
                 <li class="nav-item px-2">
                     <a class="nav-link text-light" href="#experience">Experience</a>
                 </li>
@@ -29,7 +31,13 @@
                 </li>
             </ul>
         </div>
-        <div class="flex-grow-1"></div>
+        <div class="d-flex align-items-center gap-2 ms-2">
+            <button id="themeToggle" type="button" class="btn btn-sm btn-outline-light btn-theme-toggle"
+                    aria-label="Toggle dark mode" aria-pressed="false">
+                <span class="theme-icon-light"><i class="fa-solid fa-moon"></i></span>
+                <span class="theme-icon-dark d-none"><i class="fa-solid fa-sun"></i></span>
+            </button>
+        </div>
     </div>
 </nav>
 </body>
