--- a/src/main/resources/templates/fragments/home-page/carousel.html
+++ b/src/main/resources/templates/fragments/home-page/carousel.html
@@ -6,16 +6,16 @@
 <div class="carousel slide px-3 pt-4" data-bs-ride="carousel" th:fragment="carousel" data-bs-interval="4500" id="myCarousel">
     <div class="carousel-inner">
         <div class="carousel-item active">
-            <img th:src="@{static/images/self_beach.png}"  alt="Picture of myself on the beach">
+            <img th:src="@{/images/self_beach.png}"  alt="Picture of myself on the beach">
         </div>
         <div class="carousel-item">
-            <img th:src="@{static/images/self_cat.png}" alt="Two Pictures of myself with my cat">
+            <img th:src="@{/images/self_cat.png}" alt="Two Pictures of myself with my cat">
         </div>
         <div class="carousel-item">
-            <img th:src="@{static/images/self_pieter.png}" alt="Picture of myself with Pieter Bijl">
+            <img th:src="@{/images/self_pieter.png}" alt="Picture of myself with Pieter Bijl">
         </div>
         <div class="carousel-item">
-            <img th:src="@{static/images/self_chess.png}" alt="Picture of myself during a chess game OTB">
+            <img th:src="@{/images/self_chess.png}" alt="Picture of myself during a chess game OTB">
         </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
