--- a/src/main/resources/templates/home-page.html
+++ b/src/main/resources/templates/home-page.html
@@ -8,9 +8,9 @@
 </head>
 
 <body class="pt-5 mt-3">
-<nav layout:fragment="content" data-bs-spy="scroll" data-bs-target="#my-navbar" data-bs-smooth-scroll="true" data-bs-offset="0" tabindex="0">
+<div layout:fragment="content" data-bs-spy="scroll" data-bs-target="#my-navbar" data-bs-smooth-scroll="true" data-bs-offset="0" tabindex="0">
 
-    <section class="scheme-color-1" id="about-me">
+    <section class="scheme-color-1" id="about-me" data-reveal>
         <div class="row">
             <div class="col-lg-6">
                 <article th:replace="~{fragments/home-page/aboutme :: aboutme}"></article>
@@ -34,13 +34,13 @@
     </section>
 
 
-    <section class="row scheme-color-2 pb-3" id="experience">
+    <section class="row scheme-color-2 pb-3" id="experience" data-reveal>
         <div class="col-lg-12">
             <article th:replace="~{fragments/home-page/timeline :: timeline}"></article>
         </div>
     </section>
 
-    <section class="row scheme-color-5 pb-3" id="skills">
+    <section class="row scheme-color-5 pb-3" id="skills" data-reveal>
         <div class="col-0 col-lg-1"></div>
         <div class="col-lg-5">
             <article th:replace="~{fragments/home-page/certificates :: certificates}"></article>
@@ -51,7 +51,7 @@
         <div class="col-0 col-lg-1"></div>
     </section>
 
-    <section class="row scheme-color-1 py-3" id="recommendation">
+    <section class="row scheme-color-1 py-3" id="recommendation" data-reveal>
         <div class="col-0 col-lg-1"></div>
         <div class="col-12 col-lg-10">
             <article th:replace="~{fragments/home-page/recommendation :: recommendation}"></article>
@@ -60,12 +60,14 @@
 
     </section>
 
-    <section class="row scheme-color-2" id="about">
+    <section class="row scheme-color-2" id="about" data-reveal>
         <div class="col-12 col-lg-3">
             <article th:replace="~{fragments/home-page/aboutwebsite :: aboutwebsite}"></article>
         </div>
         <div class="col-12 col-lg-6 scheme-color-3 my-3 rounded py-3">
-            <img th:src="@{static/images/cloud_architecture.png}" class="d-block w-100" alt="picture of cloud architecture">
+            <img th:src="@{/images/cloud_architecture.png}" class="d-block w-100"
+                 alt="Diagram illustrating cloud architecture"
+                 loading="lazy" decoding="async" fetchpriority="low">
         </div>
         <div class="col-12 col-lg-3">
             <article th:replace="~{fragments/home-page/improvements :: improvements}"></article>
@@ -73,7 +75,7 @@
         </div>
     </section>
 
-</nav>
+</div>
 </body>
 
 </html>
