--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -6,19 +6,29 @@
 </head>
 
 <body>
-    <div th:replace="~{fragments/general/navbar :: navbar}"></div>
+    <!-- Skip link for accessibility -->
+    <a href="#about-me" class="skip-link">Skip to main content</a>
 
-    <div>
+    <header>
+        <div th:replace="~{fragments/general/navbar :: navbar}"></div>
+    </header>
+
+    <main id="main-content" tabindex="-1">
         <div layout:fragment="content"></div>
-    </div>
+    </main>
 
-    <div th:replace="~{fragments/general/footer :: footer}"></div>
+    <footer>
+        <div th:replace="~{fragments/general/footer :: footer}"></div>
+    </footer>
 
     <script src="https://kit.fontawesome.com/b73a5b4c7a.js" crossorigin="anonymous"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
             crossorigin="anonymous"></script>
-
+    <!-- Theme toggle script -->
+    <script th:src="@{/theme-toggle.js}" defer></script>
+    <!-- Enhancements (reveal animations etc.) -->
+    <script th:src="@{/enhancements.js}" defer></script>
 </body>
 </html>
