--- a/src/main/resources/templates/fragments/home-page/recommendation.html
+++ b/src/main/resources/templates/fragments/home-page/recommendation.html
@@ -61,6 +61,38 @@
     </div>
 
     <div class="accordion-item">
+        <h2 class="accordion-header" id="flush-headingFive">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#flush-collapseFive" aria-expanded="false" aria-controls="flush-collapseFive">
+                Pieter Bijl
+            </button>
+        </h2>
+        <div id="flush-collapseFive" class="accordion-collapse collapse" aria-labelledby="flush-headingFive"
+             data-bs-parent="#recommendationAccordion">
+            <div class="accordion-body d-flex justify-content-center">
+                <iframe th:src="@{/pdf/recommendation_letter_pieter_bijl_signature_redacted.pdf#toolbar=0}"
+                        class="min-vh-100 w-100"></iframe>
+            </div>
+        </div>
+    </div>
+
+    <div class="accordion-item">
+        <h2 class="accordion-header" id="flush-headingSix">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#flush-collapseSix" aria-expanded="false" aria-controls="flush-collapseSix">
+                Jeroen Dee
+            </button>
+        </h2>
+        <div id="flush-collapseSix" class="accordion-collapse collapse" aria-labelledby="flush-headingSix"
+             data-bs-parent="#recommendationAccordion">
+            <div class="accordion-body d-flex justify-content-center">
+                <iframe th:src="@{/pdf/recommendation_letter_jeroen_dee_signature_redacted.pdf#toolbar=0}"
+                        class="min-vh-100 w-100"></iframe>
+            </div>
+        </div>
+    </div>
+
+    <div class="accordion-item">
         <h2 class="accordion-header" id="flush-headingOne">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                     data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
